CAMEL-10141: make camel-bam tests pass on Java 9